<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_second"
    android:radius="10dp"
    tools:context=".SecondActivity">


    <TextView
        android:id="@+id/second_title"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/category_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_description"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/category_description"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_title" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/wrapper_sleep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/wrapper_stressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_description">

        <ImageView
            android:id="@+id/btn_sleep"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_sleep"
            android:cropToPadding="false"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/sleep_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/btn_sleep"
            android:cropToPadding="false"
            app:layout_constraintEnd_toEndOf="@+id/btn_sleep"
            app:layout_constraintStart_toStartOf="@+id/btn_sleep"
            app:layout_constraintTop_toTopOf="@+id/btn_sleep"
            app:srcCompat="@drawable/lune" />

        <TextView
            android:id="@+id/btn_sleep_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/btn_sleep"
            android:elevation="12dp"
            android:text="@string/btn_sleep"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sleep_img" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/wrapper_stressed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wrapper_sleep"
        app:layout_constraintTop_toTopOf="@+id/wrapper_sleep">

        <ImageView
            android:id="@+id/btn_stressed"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/btn_stressed"
            android:cropToPadding="false"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/stressed_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/btn_stressed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_stressed"
            app:layout_constraintTop_toTopOf="@+id/btn_stressed"
            app:srcCompat="@drawable/storm" />

        <TextView
            android:id="@+id/stressed_text"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_stressed"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="@+id/btn_stressed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stressed_img" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/wrapper_sleep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_sleep">

        <ImageView
            android:id="@+id/btn_calm"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:contentDescription="@string/btn_calm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/calm_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/btn_calm"
            app:layout_constraintEnd_toEndOf="@+id/btn_calm"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/btn_calm"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bird" />

        <TextView
            android:id="@+id/calm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_calm"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_calm"
            app:layout_constraintTop_toBottomOf="@+id/calm_img"
            tools:text="@string/btn_calm" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_stressed">

        <ImageView
            android:id="@+id/btn_focused"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:contentDescription="@string/btn_focused"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/focused_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/btn_focused"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="@+id/btn_focused"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/btn_focused"
            app:layout_constraintTop_toTopOf="@+id/btn_focused"
            app:srcCompat="@drawable/lamp" />

        <TextView
            android:id="@+id/focused_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_focused"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_focused"
            app:layout_constraintStart_toStartOf="@+id/btn_focused"
            app:layout_constraintTop_toBottomOf="@+id/focused_img"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/btn_anxiety"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:contentDescription="@string/btn_anxiety"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/anxiety_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/btn_anxiety"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_anxiety"
            app:srcCompat="@drawable/brain" />

        <TextView
            android:id="@+id/anxiety_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_anxiety"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anxiety_img" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/btn_checking"
            android:layout_width="0dp"
            android:layout_height="119dp"
            android:contentDescription="@string/btn_checking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/button_bg_rounded_corners" />

        <ImageView
            android:id="@+id/checking_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/btn_checking"
            app:layout_constraintEnd_toEndOf="@+id/btn_checking"
            app:layout_constraintStart_toStartOf="@+id/btn_checking"
            app:layout_constraintTop_toTopOf="@+id/btn_checking"
            app:srcCompat="@drawable/loup" />

        <TextView
            android:id="@+id/cheking_text"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_checking"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btn_checking"
            app:layout_constraintEnd_toEndOf="@+id/btn_checking"
            app:layout_constraintStart_toStartOf="@+id/btn_checking"
            app:layout_constraintTop_toBottomOf="@+id/checking_img"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>